--- a/Coba.html
+++ b/Coba.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Belajar Git - project 01</title>
 </head>
 <body>
-    
+    <p>Hallo semua, saya sedang belajar Git</p>
 </body>
 </html>
